Fixed search button on mobile:
Updated geocode.js to include an event listener for submitMobile

--- a/webroot/style.css
+++ b/webroot/style.css
@@ -1,5 +1,5 @@
 @media (max-width: 1029px ) {
-    #pickLocHeader, #show_map, #hide_map{
+    #show_map, #hide_map{
         display: none;
     }
 }
